syntax = "proto3";
package mathing;

import "user_row.proto";

message UserCreateRequest {
  string name = 1;
}

message UserCreateResponse {
  UserRow user_row = 1;
}
